# authorworks

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  AGENTS.md  AGENT_PROMPT.md  CLOUDFLARE_TUNNEL_CONFIG.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile.production  Dockerfile.server  Dockerfile.service  Dockerfile.spin  Dockerfile.spin-oci  Dockerfile.worker  IMPLEMENTATION_PLAN.md  LANDING_PAGE_UPDATE.md  LICENSE  Makefile  README.deployment.md  README.md  REPO_STRUCTURE.md  SERVICE_ARCHITECTURE.md  SPIN_DEPLOYMENT.md  docker-compose.homelab.simple.yml  docker-compose.homelab.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.spin.yml  docker-compose.yml  init-schema.sql  nginx-simple.conf  nginx.conf  nginx.production.conf  nginx.proxy_params  spin-redis-config.toml  spin.toml  sync_all_repos.sh  update-authelia-config.sh
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yml  docker-homelab.yml  e2e-user-journey.yml  synthetic-prod-monitor.yml
archive/: README.md
archive/authorworks-audio-service/: README.md
archive/authorworks-audio-service/docs/: a-plan.md  api-standards.md
archive/authorworks-audio-service/legacy-src/: config.rs
archive/authorworks-content-service/: .dockerignore  .gitignore  Dockerfile  README.md  operations.md
archive/authorworks-content-service/docs/: event-communication-standard.md  specs-sync-strategy.md
archive/authorworks-content-service/legacy-src/: lib.rs
archive/authorworks-discovery-service/: Dockerfile  README.md
archive/k3d-local-dev/: deploy-k3d.sh  env.example  ingress.yaml  kustomization.yaml  services.yaml  workers.yaml
backup/main-rs-files/: authorworks-discovery-service-main.rs  authorworks-editor-service-main.rs  authorworks-messaging-service-main.rs  authorworks-storage-service-main.rs  authorworks-user-service-main.rs  main.rs
charts/authorworks/: Chart.yaml  values.yaml
charts/authorworks/templates/: _helpers.tpl  (+1 more)
config/: homelab-prometheus-alerts.yaml  prometheus.yml  promtail.yml
config/grafana/: authorworks-homelab-dashboard.json
core/book-generator/: Cargo.toml  Dockerfile  README.md
core/book-generator/src/: README.md  config.rs  error.rs  lib.rs  server.rs
core/book-generator/src/book/: chapter.rs  characters.rs  genre.rs
core/book-generator/src/llm/: anthropic.rs  ollama.rs
core/book-generator/src/render/: mod.rs
core/book-generator/src/utils/: api_verification.rs  prompts.rs
docs/: CLUSTER_PREREQS.md  DEPLOYMENT_STATUS.md  HOMELAB_MONITORING.md  HOMELAB_SETUP_CHECKLIST.md  PRODUCTION_SETUP.md  README.md  agent-logging-and-analytics.md  architecture.md  authentication.md  deployment.md  getting-started.md  homelab-prometheus-alerts.yaml  mobile-prd.md  production-verification.md  spin-deployment.md
docs/archive/: CONSOLIDATION.md  DEPLOYMENT.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_READY.md  GITHUB_CLEANUP.md  PROMPT.md  WASM_MIGRATION_SUMMARY.md
frontend/app/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/landing/: setup-leptos.sh  update_nextjs_site.sh
frontend/landing/leptos-app/: Cargo.toml  index.html
frontend/landing/leptos-app/end2end/tests/: example.spec.ts
frontend/landing/leptos-app/src/: app.rs  lib.rs  main.rs
frontend/landing/leptos-app/style/: main.scss
k3d/: api-gateway.yaml  cluster-config.yaml  external-services.yaml  infrastructure.yaml  namespace.yaml  secrets.yaml
k8s/: frontend-service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  secrets.yaml  services.yaml  spin-executors.yaml  spinapp.yaml
k8s/argocd/: app-of-apps.yaml  applicationset.yaml  external-secrets.yaml  kustomization.yaml  project.yaml
k8s/base/: cert-manager-webhook-certs.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  logto.yaml  network-policy.yaml  pod-disruption-budget.yaml  resource-quotas.yaml  secrets.yaml  spin-operator-patch.yaml  spin-webhook-ca-injection.yaml  spinapp.yaml
k8s/base-minimal/: book-generator-service.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
mobile/: IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  tailwind.config.js
mobile/src/: App.tsx  index.css
mobile/src-tauri/: tauri.conf.json
scripts/: apply-homelab.sh  benchmark-wasm.sh  bootstrap-argocd.sh  build-spin.sh  convert-to-submodules.sh  deploy-aws.sh  deploy-credits.sh  deploy-homelab.sh  deploy.sh  init-db.sql  init-multiple-dbs.sh  optimize-wasm.sh  plan-submodules.sh  run-integration-tests.sh  schema.sql  seal-ghcr-secret.sh  seal-secrets.sh  synthetic-monitor.mjs  verify-deployment.sh  verify-homelab.sh
scripts/migrations/: 001_add_credit_system.sql  002_frontend_schema.sql
server/: Cargo.toml
server-wrapper/: Cargo.toml
server-wrapper/src/: main.rs
server/src/: main.rs
services/: README.md
services/content/: Cargo.toml  spin.toml
services/content/src/: credits.rs  error.rs  generation.rs  handlers.rs  lib.rs  models.rs
services/discovery/: Cargo.toml  spin.toml
services/discovery/src/: error.rs  lib.rs  models.rs
services/editor/: Cargo.toml  spin.toml
services/editor/src/: error.rs  lib.rs  models.rs  ot.rs
services/media/: Cargo.toml  spin.toml
services/media/src/: error.rs  lib.rs  models.rs
services/messaging/: Cargo.toml  Dockerfile  spin.toml
services/messaging/src/: error.rs  lib.rs  models.rs
services/storage/: Cargo.toml  spin.toml
services/storage/src/: error.rs  lib.rs  models.rs  s3.rs
services/subscription/: Cargo.toml  spin.toml
services/subscription/src/: credits.rs  error.rs  lib.rs  models.rs  stripe.rs
services/user/: Cargo.toml  spin.toml
services/user/src/: auth.rs  error.rs  handlers.rs  lib.rs  models.rs
terraform/aws/: main.tf  outputs.tf  spinkube.tf  terraform.tfvars.example  variables.tf
workers/content/: Cargo.toml  Dockerfile
workers/content/src/: anthropic.rs  database.rs  main.rs  prompts.rs
workers/media/: Cargo.toml  Dockerfile
workers/media/src/: database.rs  main.rs  s3.rs
(+132 files in other folders)
