[workspace]
# Note: Individual service repositories have been archived.
# The workspace now focuses on the consolidated architecture.
# Core engine and specifications are in the authorworks-engine submodule.
members = [
    "server",
    "server-wrapper",
]
exclude = [
    "authorworks-engine",  # Submodule with its own Cargo.toml
]
resolver = "2"

[workspace.dependencies]
spin-sdk = "2.2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
base64 = "0.21"
chrono = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[profile.release-small]
inherits = "release"
opt-level = "s"     # Optimize for size with faster builds

# WASM-specific optimizations
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
