[workspace]
# AuthorWorks Platform - Consolidated Monorepo
# All services are now part of this workspace
members = [
    "server",
    "server-wrapper",
    "core/book-generator",
    "services/user",
    "services/content",
    "services/storage",
    "services/editor",
    "services/messaging",
    "services/subscription",
    "services/discovery",
    "services/media",
]
exclude = [
    "authorworks-engine",  # Submodule with its own Cargo.toml
    "archive",             # Archived services for reference
]
resolver = "2"

[workspace.dependencies]
spin-sdk = "2.2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2.5"
http = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[profile.release-small]
inherits = "release"
opt-level = "s"     # Optimize for size with faster builds

# WASM-specific optimizations
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
