[package]
name = "book-generator"
version = "0.1.0"
edition = "2021"
description = "Shared AI-powered book generation library for AuthorWorks platform"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures-core = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM clients
anthropic = "0.0.8"
async-openai = "0.24"
ollama-rs = "0.2"
langchain-rust = "4.6"

# HTTP client & server
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Book rendering
mdbook = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json"] }

[lib]
name = "book_generator"
path = "src/lib.rs"

[[bin]]
name = "book-generator-cli"
path = "src/main.rs"

[[bin]]
name = "book-generator-server"
path = "src/server.rs"
