[package]
name = "authorworks-discovery-service"
version = "0.1.0"
edition = "2021"
description = "Search and discovery service with Elasticsearch"

[dependencies]
spin-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["cdylib"]
