[package]
name = "authorworks-editor-service"
version = "0.1.0"
edition = "2021"
description = "Collaborative text editor service with real-time sync"

[dependencies]
spin-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["cdylib"]
