[package]
name = "authorworks-media-service"
version = "0.1.0"
edition = "2021"
description = "Media processing and delivery service"

[dependencies]
spin-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["cdylib"]
