[package]
name = "authorworks-storage-service"
version = "0.1.0"
edition = "2021"
description = "File storage service with S3/MinIO support"

[dependencies]
spin-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[lib]
crate-type = ["cdylib"]
