[package]
name = "authorworks-subscription-service"
version = "0.1.0"
edition = "2021"
description = "Subscription and billing service with Stripe integration"

[dependencies]
spin-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[lib]
crate-type = ["cdylib"]
