[package]
name = "authorworks-user-service"
version = "0.1.0"
edition = "2021"
description = "User authentication and profile management service with Logto integration"

[dependencies]
spin-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["cdylib"]
