[package]
name = "content-worker"
version = "0.1.0"
edition = "2021"
description = "Background worker for AI content generation"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
lapin = "2.3"  # RabbitMQ client
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1.9"
aws-config = "1.1"

[[bin]]
name = "content-worker"
path = "src/main.rs"

