[package]
name = "content-worker"
version = "0.1.0"
edition = "2021"
description = "Background worker for AI content generation"

[[bin]]
name = "content-worker"
path = "src/main.rs"

[dependencies]
# Core book generator library with LLM support
book_generator = { path = "../../core/book-generator", package = "book-generator" }

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
