[package]
name = "media-worker"
version = "0.1.0"
edition = "2021"
description = "Background worker for media processing (audio, video, images)"

[dependencies]
tokio = { version = "1.35", features = ["full", "process"] }
lapin = "2.3"  # RabbitMQ client
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1.9"
aws-config = "1.1"
tempfile = "3.9"

[[bin]]
name = "media-worker"
path = "src/main.rs"

