[package]
name = "media-worker"
version = "0.1.0"
edition = "2021"
description = "Background worker for media processing"

[[bin]]
name = "media-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "1.1"
aws-sdk-s3 = "1.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
