[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6.9", features = ["csr"] }
leptos_meta = { version = "0.6.9", features = ["csr"] }
log = "0.4.20"
console_log = "1.0.0"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.67", features = [
    "Document", 
    "Window", 
    "Location", 
    "Element", 
    "ScrollBehavior",
    "ScrollIntoViewOptions"
]}
console_error_panic_hook = "0.1.7"
urlencoding = "2.1.3"

[features]
default = ["csr"]
csr = [
    "leptos/csr",
    "leptos_meta/csr"
]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]

[package.metadata.leptos]
output-name = "leptos-app"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
env = "PROD"
bin-features = ["csr"]
lib-features = ["csr"]
bin-default-features = false
lib-default-features = false
browserquery = "defaults"
watch = false
site-serve-command = "trunk serve"
copy-file = ["index.html"]
